# beam-migrate-nix

./: .gitignore  Main.hs  beam-migrate-env  beam-migrate-nix.cabal  default.nix
nix/: beam.json
