name:                beam-migrate-nix
version:             0.1.0.0
synopsis:            Reproducible environment to test beam-migrate-cli
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lib
  build-depends:       base >=4.10 && <4.11
                     , beam-core     == 0.5.*
                     , beam-postgres == 0.1.*
                     , beam-migrate  == 0.1.*
  hs-source-dirs:      src
  default-language:    Haskell2010