name:                beam-migrate-nix
version:             0.1.0.0
synopsis:            Reproducible environment to test beam-migrate-cli
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11
                     , bytestring        == 0.10.*
                     , text              == 1.2.*
                     , postgresql-simple == 0.5.*
                     , beam-core         == 0.6.*
                     , beam-postgres     == 0.2.*
                     , beam-migrate      == 0.2.*
  default-language:    Haskell2010